charts/ops/istio/gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: sac-gw
  namespace: istio-system
spec:
  servers:
    - hosts:
        - sac.prod.cluster.yanychoi.site
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: istio-grafana-tls
        mode: SIMPLE
    - hosts:
        - sac.prod.cluster.yanychoi.site
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    app: istio-ingressgateway
